Menú a la Izquierda

--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
   </head>
 
   <body>
-    <div class="container row">
-        <a href="" class="item">Inicio</a>
-        <a href="" class="item">Pandas</a>
-        <a href="" class="item">Historia</a>
-        <a href="" class="item">Extinción</a>
+    <div class="container row-reverse">
+        <a href="" class="item">INICIO</a>
+        <a href="" class="item">PANDAS</a>
+        <a href="" class="item">HISTORIA</a>
+        <a href="" class="item">EXTINCIÓN</a>
     </div>
 
     <div class="container row imagenes">
         <div class="itemImg">
-          <span class="cerrar">&times;</span>
-          <img src="assets/image/panda01.jpg"/>
+&times;<img src="assets/image/panda01.jpg"/>
         </div>
 
         <div class="itemImg">
