Menú a la derecha/JS

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
     <div class="container row imagenes">
         <div class="itemImg">
-&times;<img src="assets/image/panda01.jpg"/>
+          <span class="cerrar">&times;</span>
+          <img src="assets/image/panda01.jpg"/>
         </div>
 
         <div class="itemImg">
